--- a/WindowsFormsApp1.csproj
+++ b/WindowsFormsApp1.csproj
@@ -166,6 +166,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include=".gitignore" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
