colocando a classe banco no projeto

--- a/WindowsFormsApp1.csproj
+++ b/WindowsFormsApp1.csproj
@@ -167,6 +167,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include=".gitignore" />
+    <Compile Include="Banco.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
